--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.7",
     "recharts": "^2.8.0",
     "sweetalert2": "^11.7.31",
     "tailwindcss": "^3.3.3",
