--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "next": "^12.2.6",
-    "postcss": "^8.4.31",
+    "postcss": ">=8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.7",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "postcss": ">=8.4.31"
   }
 }
