--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.4",
+    "@apollo/client": "^3.8.6",
     "autoprefixer": "^10.4.16",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
+    "jwt-decode": "^3.1.2",
     "next": "^12.2.6",
     "postcss": ">=8.4.31",
     "react": "18.2.0",
