--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.8.6",
     "autoprefixer": "^10.4.16",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
