--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.291.0",
     "next": "^12.2.6",
+    "next-auth": "^4.24.5",
     "postcss": ">=8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
