--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
-    "@material-tailwind/react": "^2.1.4",
+    "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-table": "^8.10.7",
     "autoprefixer": "^10.4.16",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.3",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.291.0",
     "next": "^12.2.6",
-    "next-auth": "^4.24.5",
     "postcss": ">=8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
