--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-table": "^8.10.7",
     "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -23,6 +24,7 @@
     "next": "^14.0.4",
     "postcss": ">=8.4.31",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.7",
     "recharts": "^2.8.0",
